Fixing layout issue.

--- a/src-gwt/org/opencms/gwt/client/ui/css/input.css
+++ b/src-gwt/org/opencms/gwt/client/ui/css/input.css
@@ -8,6 +8,13 @@ input.textBox {
 	background: transparent;
 	padding: 0px;
 	border-radius: value("constants.css.borderRadius");
+	color: value("constants.css.textColor");
+	line-height: value("constants.css.lineHeight");
+	font-size: value("constants.css.fontSize");
+	box-shadow:none;
+}
+input.textBox:focus{
+	box-shadow:none;
 }
 
 .highTextBoxes .textBox {
